--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,6 +8,7 @@ services:
   web-tests:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - VSTS_WORK=/var/vsts
     ports:
       - "80"
     entrypoint:
