roll back to original config files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,6 @@ services:
     build:
       context: .
       dockerfile: web/Dockerfile
-#  volumes:
-#    - 'myshare:/shared'
 
   web-tests:
     image: web-tests
@@ -14,11 +12,8 @@ services:
       context: .
       dockerfile: web/Dockerfile      
       target: test
-#  volumes:
-#    - 'myshare:/shared'
     volumes: 
-      #- ${BUILD_ARTIFACTSTAGINGDIRECTORY:-./tests-results/}:/tests
-      - test:/test
+      - ${BUILD_ARTIFACTSTAGINGDIRECTORY:-./tests-results/}:/tests      
 
 volumes:
   test:
