set back test image in dockerfile

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -12,8 +12,8 @@ COPY . .
 WORKDIR /src/web
 RUN dotnet build -c Release -o /app
 
-#FROM build as test
-#WORKDIR /src/web.test
+FROM build as test
+WORKDIR /src/web.test
 #RUN dotnet test
 
 FROM build AS publish
@@ -23,5 +23,4 @@ RUN dotnet publish -c Release -o /app
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-#COPY --from=test /src/web.test/test-results.xml .
 ENTRYPOINT ["dotnet", "web.dll"]
